fix: 강의랑 코드 싱크 맞추기